--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -61,21 +61,7 @@
       target="_blank"
       rel="nofollow noopener noreferrer"
     >
-      <div>Built with Angular by Jose Andres</div>
-    </a>
-    <a
-      (click)="
-        analyticsService.sendAnalyticEvent(
-          'click_github_portfolio_brittany',
-          'footer',
-          'click'
-        )
-      "
-      href="https://github.com/bchiang7/v4"
-      target="_blank"
-      rel="nofollow noopener noreferrer"
-    >
-      <div class="mt-2">Designed by Brittany Chiang</div>
+      <div>Built with Angular</div>
     </a>
   </div>
 </footer>
