--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -23,7 +23,7 @@
               'email'
             )
           "
-          href="mailto:andresjosehr@gmail.com"
+          href="mailto:pro22nati@gmail.com"
           target="_black"
           class="main-btn"
         >
