--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -107,7 +107,7 @@
               class="rounded"
               width="300"
               height="300"
-              src="assets/images/me.jpg"
+              src="assets/images/profile-preview.png"
               alt="Natnael Yirga"
             />
           </div>
