--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -89,7 +89,7 @@
             <img
               *ngIf="languageFormControl.value == 'am'"
               width="20px"
-              src="https://www.worldometers.info/img/flags/sp-flag.gif"
+              src="https://www.worldometers.info/img/flags/et-flag.gif"
               alt="Amharic"
             />
             <span *ngIf="languageFormControl.value == 'am'" class="flag-text"
@@ -119,7 +119,7 @@
             >
               <img
                 width="20px"
-                src="https://www.worldometers.info/img/flags/sp-flag.gif"
+                src="https://www.worldometers.info/img/flags/et-flag.gif"
                 alt="Amharic"
               />
               <span class="flag-text">Amharic</span>
@@ -256,7 +256,7 @@
                   [class.active]="languageFormControl.value == 'es'"
                 >
                   <img
-                    src="https://www.worldometers.info/img/flags/sp-flag.gif"
+                    src="https://www.worldometers.info/img/flags/et-flag.gif"
                     alt="Español"
                   />
                   <span class="flag-text">Español</span>
