--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -93,7 +93,7 @@
               alt="Amharic"
             />
             <span *ngIf="languageFormControl.value == 'am'" class="flag-text"
-              >Amharic</span
+              >አማርኛ</span
             >
             <svg
               class="arrow-language"
@@ -122,7 +122,7 @@
                 src="https://www.worldometers.info/img/flags/et-flag.gif"
                 alt="Amharic"
               />
-              <span class="flag-text">Amharic</span>
+              <span class="flag-text">አማርኛ</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -251,19 +251,19 @@
             <li>
               <div class="language-container">
                 <div
-                  (click)="changeLanguage('es')"
+                  (click)="changeLanguage('am')"
                   style="
                     border-bottom-left-radius: 0px !important;
                     border-bottom-right-radius: 0px !important;
                   "
                   class="language-container language-container-selector active"
-                  [class.active]="languageFormControl.value == 'es'"
+                  [class.active]="languageFormControl.value == 'am'"
                 >
                   <img
                     src="https://www.worldometers.info/img/flags/et-flag.gif"
                     alt="Amharic"
                   />
-                  <span class="flag-text">Amharic</span>
+                  <span class="flag-text">አማርኛ</span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
