--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -69,16 +69,25 @@
             >
               {{ "FeatureProjects.Label" | translate }}
             </h4>
-            <h5
+            <a [href]="project.Source" target="_blank">
+              <h5
               [class.text-right]="i % 2 == 0"
               [class.text-left]="i % 2 != 0"
               class="proyect-name"
             >
               {{ project.Title }}
             </h5>
+          </a>
 
             <div class="proyect-description-box" (click)="debug()">
               <p class="mb-0" [innerHTML]="project.Description"></p>
+            </div>
+            <div *ngIf="project.Nuget != ''" class="project-skills"
+              [class.text-right]="i % 2 == 0"
+              [class.text-left]="i % 2 != 0">
+              <a [href]="project.Nuget" target="_blank">
+                <img height="60px" width="60px" alt="nuget icon" src="https://www.nuget.org/Content/gallery/img/logo-header.svg"/>
+              </a>
             </div>
             <ul
               [class.justify-content-end]="i % 2 == 0"
